# xemacs-earl

./: .cvsignore  .gitignore  ChangeLog  ChangeLog.Xft  Makefile.in.in  README.git-branch  README.md  configure.ac  s RETURN)  version.sh
etc/: Darcs.boring
lib-src/: ChangeLog  make-docfile.c
lisp/: ChangeLog  ChangeLog.Xft  build-report.el  curl.el  faces.el  font.el  fontconfig.el  neon.el
lisp/mule/: canna-leim.el
lwlib/: ChangeLog.Xft  Makefile.in.in  lwlib-colors.c
man/: xemacs-faq.texi
modules/: ChangeLog
modules/canna/: Makefile.in.in  cannaapi.c  configure.ac
modules/curl/: Makefile.in.in  configure.ac  curl.el  curl_api.c  curl_api.h  curlapi.c  curlapi.h
modules/earl/: Makefile.in.in  configure.ac  earl-utils.el  earl.c  earl.h
modules/git/: Makefile.in.in  configure.ac  git_api.c  gitapi.c
modules/neon/: Makefile.in.in  configure.ac  neon-test-sample-user.el  neon-test.el  neon.el  neon_api.c  neon_api.h  neonapi.c  neonapi.h
modules/svg/: Makefile.in.in  README.license.xsvg  configure.ac  svg.c  xlwsvg.c  xlwsvg.h  xlwsvgP.h
src/: ChangeLog  ChangeLog.Xft  Makefile.in.in  config.h.in  console-x-impl.h  depend  dumper.c  emacs.c  faces.c  faces.h  frame-x.c  general.c  inline.c  keymap.c  lisp.h  lrecord.h  objects-x.c  objects.c  redisplay-x.c  symsinit.h  xft-fonts.c  xft-fonts.h
tests/: ChangeLog  README.tests
tests/interactive/: curl-test.el  neon-test.el
